[project]
name = "desafio-most-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.3.6",
    "crewai>=0.193.2",
    "google-generativeai>=0.8.5",
    "langchain>=1.1.3",
    "langchain-groq>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "mcp>=1.23.3",
    "openai>=2.9.0",
    "pypdf>=6.4.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
